--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=
+spring.datasource.url=mysql://b36ef18b02b915:5976d171@us-cdbr-iron-east-04.cleardb.net/heroku_2617dc5fb91c506?reconnect=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
