Salvando primeiro arquivo no S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=lucasrcunha01@gmail.com
 default.recipient=lucasrcunha01@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=AKIAIW2AK4KAZJ3OYWBQ
+aws.secret_access_key=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
+s3.bucket=projeto-pedidos
+s3.region=sa-east-1
