--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ default.recipient=lucasrcunha01@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
 
-aws.access_key_id=AKIAIW2AK4KAZJ3OYWBQ
-aws.secret_access_key=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
+aws.access_key_id=
+aws.secret_access_key=
 s3.bucket=projeto-pedidos
 s3.region=sa-east-1
